force-app/main/default/objects/SFDC_Strategy__c/fields/What_LOB_s_are_involved__c.field-meta.xml
<CustomField>
    <fullName>What_LOB_s_are_involved__c</fullName>
    <label>What LOB´s are involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client 3rd party software</fullName>
            </value>
            <value>
                <fullName>CLIENT PERIPHERALS</fullName>
            </value>
            <value>
                <fullName>Cloud Client</fullName>
            </value>
            <value>
                <fullName>CSG other services</fullName>
            </value>
            <value>
                <fullName>Data Domain</fullName>
            </value>
            <value>
                <fullName>Data Protection Suite</fullName>
            </value>
            <value>
                <fullName>DDPE</fullName>
            </value>
            <value>
                <fullName>Dell Storage  </fullName>
            </value>
            <value>
                <fullName>DEPLOYMENT SERVICES</fullName>
            </value>
            <value>
                <fullName>Displays</fullName>
            </value>
            <value>
                <fullName>Elastic Cloud Storage</fullName>
            </value>
            <value>
                <fullName>Enterprise infrastructure</fullName>
            </value>
            <value>
                <fullName>ESG 3RD PARTY SOFTWARE</fullName>
            </value>
            <value>
                <fullName>ESG OTHER SERVICES</fullName>
            </value>
            <value>
                <fullName>Fixed Workstations</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Isilon</fullName>
            </value>
            <value>
                <fullName>Latitude</fullName>
            </value>
            <value>
                <fullName>Mobile Workstations</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>OptiPlex</fullName>
            </value>
            <value>
                <fullName>PowerEdge</fullName>
            </value>
            <value>
                <fullName>Security management</fullName>
            </value>
            <value>
                <fullName>Software - Server</fullName>
            </value>
            <value>
                <fullName>SOFTWARE - STORAGE</fullName>
            </value>
            <value>
                <fullName>SUPPORT SERVICES</fullName>
            </value>
            <value>
                <fullName>Unity AFA</fullName>
            </value>
            <value>
                <fullName>Unity Hybrid</fullName>
            </value>
            <value>
                <fullName>Virtustream Storage Cloud</fullName>
            </value>
            <value>
                <fullName>VMAX AFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>