force-app/main/default/objects/SFDC_Strategy__c/fields/When_do_you_plan_to_realize_Strategy__c.field-meta.xml
<CustomField>
    <fullName>When_do_you_plan_to_realize_Strategy__c</fullName>
    <inlineHelpText>Select the appropriate Fiscal year</inlineHelpText>
    <label>When do you plan to realize Strategy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY17</fullName>
            </value>
            <value>
                <fullName>FY18</fullName>
            </value>
            <value>
                <fullName>FY19</fullName>
            </value>
            <value>
                <fullName>FY20 Q1</fullName>
            </value>
            <value>
                <fullName>FY20 Q2</fullName>
            </value>
            <value>
                <fullName>FY20 Q3</fullName>
            </value>
            <value>
                <fullName>FY20 Q4</fullName>
            </value>
            <value>
                <fullName>FY21 Q1</fullName>
            </value>
            <value>
                <fullName>FY21 Q2</fullName>
            </value>
            <value>
                <fullName>FY21 Q3</fullName>
            </value>
            <value>
                <fullName>FY21 Q4</fullName>
            </value>
            <value>
                <fullName>FY22 Q1</fullName>
            </value>
            <value>
                <fullName>FY22 Q2</fullName>
            </value>
            <value>
                <fullName>FY22 Q3</fullName>
            </value>
            <value>
                <fullName>FY22 Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>