force-app/main/default/objects/SFDC_Strategy__c/fields/Which_LOB_will_you_offer__c.field-meta.xml
<CustomField>
    <fullName>Which_LOB_will_you_offer__c</fullName>
    <inlineHelpText>What Domain(s) or product families do you plan to offer</inlineHelpText>
    <label>Product/Solutions Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boomi</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client S&amp;P</fullName>
            </value>
            <value>
                <fullName>Compute (Servers)</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>Enterprise Infrastructure</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Pivotal</fullName>
            </value>
            <value>
                <fullName>RSA</fullName>
            </value>
            <value>
                <fullName>SecureWorks</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>UDS</fullName>
            </value>
            <value>
                <fullName>Unified Workspace</fullName>
            </value>
            <value>
                <fullName>Virtustream</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>