force-app/main/default/objects/SFDC_Strategy__c/fields/X12_Month_MDS_Revenue_Plan__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_MDS_Revenue_Plan__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <inlineHelpText>Enter values in standard currency</inlineHelpText>
    <label>12 Month MDS Revenue Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>