force-app/main/default/objects/SFDC_Strategy__c/fields/X12_Month_ProConsult_Revenue_Plan__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_ProConsult_Revenue_Plan__c</fullName>
    <inlineHelpText>Enter values in standard currency</inlineHelpText>
    <label>12 Month ProConsult Revenue Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>