force-app/main/default/objects/SFDC_Strategy__c/recordTypes/Closed.recordType-meta.xml
<RecordType>
    <fullName>Closed</fullName>
    <active>true</active>
    <description>This record type is used to lock the strategy page layout from being edited.</description>
    <label>Closed</label>
</RecordType>