force-app/main/default/objects/SFDC_Strategy__c/recordTypes/Open.recordType-meta.xml
<RecordType>
    <fullName>Open</fullName>
    <active>true</active>
    <description>This record type is used when a Direct Account Plan strategy is being created.</description>
    <label>Open</label>
</RecordType>