force-app/main/default/objects/SFDC_Strategy__c/recordTypes/Partner_Strategy.recordType-meta.xml
<RecordType>
    <fullName>Partner_Strategy</fullName>
    <active>true</active>
    <description>This record type is used when a Partner Business Plan strategy is being created.</description>
    <label>Partner Strategy</label>
</RecordType>