force-app/main/default/objects/SFDC_Strategy__c/validationRules/Closed_Strategy_Details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Strategy_Details_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
OR
(
 ISPICKVAL(Did_you_realize_your_Strategy__c, &apos;Yes, I achieved this Strategy in the committed timeframe&apos;) ,
 ISPICKVAL(Did_you_realize_your_Strategy__c, &apos;No, I did not achieve this Strategy&apos;) 
),
 Closed_Strategy_Details__c   = NULL
)</errorConditionFormula>
    <errorDisplayField>Closed_Strategy_Details__c</errorDisplayField>
    <errorMessage>Please fill in details on how this strategy is closed.</errorMessage>
</ValidationRule>