force-app/main/default/objects/SFDC_Strategy__c/validationRules/CR_6738_Which_Domain_will_you_offer.validationRule-meta.xml
<ValidationRule>
    <fullName>CR_6738_Which_Domain_will_you_offer</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( ISBLANK(Strategy_Potential_Product_Revenue__c), 
OR( 
INCLUDES(Which_LOB_will_you_offer__c, &quot;Networking&quot;) 
, 
INCLUDES(Which_LOB_will_you_offer__c, &quot;Other&quot;) 
, 
INCLUDES(Which_LOB_will_you_offer__c, &quot;IDM (Intelligent Data Mgmt)&quot;) 
, 
INCLUDES(Which_LOB_will_you_offer__c, &quot;NGDC (Next Gen Data Center)&quot;) 
, 
INCLUDES(Which_LOB_will_you_offer__c, &quot;NGEU (Next Gen End User)&quot;) 
)),TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Strategy_Potential_Product_Revenue__c</errorDisplayField>
    <errorMessage>If the Domain is IDM, NGDC, NGEU, Networking or Other, Strategy Potential Product Revenue is mandatory.</errorMessage>
</ValidationRule>