force-app/main/default/objects/SFDC_Strategy__c/validationRules/Strategy_Potential_Serv_Rev_Required_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Strategy_Potential_Serv_Rev_Required_1</fullName>
    <active>false</active>
    <description>Ensure “Strategy Potential Service Revenue” field are populated when “What Domain are you Offering?” field are having the following value – Services</description>
    <errorConditionFormula>AND(
INCLUDES( Which_LOB_will_you_offer__c ,&quot;Services&quot;),
ISBLANK(Strategy_Potential_Service_Revenue__c))</errorConditionFormula>
    <errorDisplayField>Strategy_Potential_Service_Revenue__c</errorDisplayField>
    <errorMessage>If Domain is Services, Strategy Potential Service Revenue is mandatory</errorMessage>
</ValidationRule>